--- a/views/edit.pug
+++ b/views/edit.pug
@@ -4,15 +4,15 @@ html
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet")
   body
     div(class="container")
-        h2(class="pb-2 border-bottom")="MyBank Edit Email"
+        h2(class="pb-2 border-bottom")="Edit Email"
           small 
             a(href="/")="Index page"
         if error 
             p(class="alert alert-danger")=error
-            
+
         form(class="row g-3 py-3" method="post" action="")
             div(class="col-auto")
-                input( type="email" class="form-control" name="email" placeholder="Email" value=email)
+                input( type="email" class="form-control" name="inputEmail" placeholder="Email" value=email)
                 
             div(class="col-auto")
                 button(type="submit" class="btn btn-primary mb-3")="Submit"
