--- a/views/profile.pug
+++ b/views/profile.pug
@@ -4,7 +4,7 @@ html
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet")
   body 
     div(class="container")
-      h2(class="pb-2 border-bottom")="MyBank Profile"
+      h2(class="pb-2 border-bottom")="Profile"
         small 
             a(href="/")="Index page"
 
