--- a/views/profile.pug
+++ b/views/profile.pug
@@ -8,9 +8,9 @@ html
         small 
             a(href="/")="Index page"
 
-      h4(class="py-3")="Username: " 
-        span=username
+      h4(class="py-3")="Username:" 
+         span(class="px-1 fw-normal")=username
 
-      h4(class="py-3")="Email: "
-        span=email
+      h4(class="py-3")="Email:"
+        span(class="px-1 fw-normal")=email
         a(href="/profile/edit" class="btn btn-primary mx-3")="Edit Email"
